--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -19,4 +19,4 @@ jobs:
           docker pull mixeway/scanner:latest
       - name: Run Scan
         run: |
-          docker run -e OSS_USERNAME=mon_ber78@wp.pl -e OSS_KEY=d1b5e23a1e6bc684d242086e113a17c2d13150bf -e MIXEWAY_URL=https://hub.mixeway.io -e MIXEWAY_KEY=5e8eb6e2-7aff-4eff-837e-9a226efec237 -e MIXEWAY_PROJECT_ID=86 -e MODE=STANDALONE -e MIXEWAY_PROJECT_NAME=MonikaBer_lab_secure_app -e COMMIT_ID=test -e BRANCH=master -v /opt/lab_sec_audit/sast:/opt/sources mixeway/scanner:latest
+          docker run -e OSS_USERNAME=mon_ber78@wp.pl -e OSS_KEY=d1b5e23a1e6bc684d242086e113a17c2d13150bf -e MIXEWAY_URL=https://hub.mixeway.io -e MIXEWAY_KEY=5e8eb6e2-7aff-4eff-837e-9a226efec237 -e MIXEWAY_PROJECT_ID=86 -e MODE=STANDALONE -e MIXEWAY_PROJECT_NAME=MonikaBer_lab_secure_app -e COMMIT_ID=test -e BRANCH=master -v `pwd`:/opt/lab_sec_audit/sast:/opt/sources mixeway/scanner:latest
